# votr

./: .eslintrc.js  .gitignore  .npmrc  .prettierignore  README.md  commit2.txt  console.py  coverage_extra.css  eslint.config.mjs  nbenv.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements-to-freeze.txt  requirements.txt  test1.py  testRest.py  tsconfig.json  webpack.config.js  x
aisikl/: app.py  context.py  dialog.py  events.py  exceptions.py  portal.py  webui-coverage.txt
aisikl/components/: __init__.py  action.py  actionablecontrol.py  actionlist.py  base.py  button.py  checkbox.py  checklist.py  combobox.py  component.py  control.py  datecontrol.py  dialogbody.py  htmlarea.py  image.py  label.py  list.py  menuitem.py  numbercontrol.py  panel.py  popupmenu.py  progressbar.py  radiobox.py  separator.py  splitpane.py  stackedpane.py  tabbedpane.py  table.py  textarea.py  textcontrol.py  textfield.py  textinput.py  tree.py  (+1 more)
docs/: Makefile  aisikl.app.rst  aisikl.components.rst  aisikl.context.rst  aisikl.dialog.rst  aisikl.events.rst  aisikl.exceptions.rst  aisikl.portal.rst  aisikl.rst  conf.py  fladgejt.helpers.rst  fladgejt.rst  fladgejt.structures.rst  index.rst  make.bat
fladgejt/: base.py  flashback.py  helpers.py  hybrid.py  login.py  structures.py
tests/: golden.py  scenario_anonymous.py  scenario_fladgejt.py  testutils.py
votrfront/: app.py  buildcss.sh  buildstatic.sh  cron.py  default_settings.py  front.py  jsdeps.py  login.py  logutil.py  proxied.py  report.py  rpc.py  serve.py  sessions.py  utils.py  watchstatic.py  webpack.config.js
(+166 files in other folders)
